--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@emmetio/codemirror-plugin",
-  "version": "0.3.5",
+  "name": "emmetio-codemirror-plugin-webextensions",
+  "version": "0.3.6",
   "description": "Plugin for CodeMirror web editor",
   "main": "dist/emmet-codemirror-plugin.cjs.js",
   "module": "dist/emmet-codemirror-plugin.es.js",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/emmetio/codemirror-plugin.git"
+    "url": "git+https://github.com/webextensions/codemirror-plugin.git"
   },
   "keywords": [],
   "author": "Sergey Chikuyonok <serge.che@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/emmetio/codemirror-plugin/issues"
+    "url": "https://github.com/webextensions/codemirror-plugin/issues"
   },
-  "homepage": "https://github.com/emmetio/codemirror-plugin#readme",
+  "homepage": "https://github.com/webextensions/codemirror-plugin#readme",
   "files": [
     "dist",
     "example.html"
